[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Interact/Geladeira.gd" type="Script" id=1]
[ext_resource path="res://GFX/Font/RPGSystem.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GFX/Piso.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Objects/Pegaveis/Photo.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 62.6545, 55.7565 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 87.001, 70.7153 )

[node name="Geladeira" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -50.924
margin_top = -77.9991
margin_right = 57.076
margin_bottom = -47.9991
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Geladeira"

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.129412, 0.839216, 0.772549, 1 )
position = Vector2( 0, 9.05725 )
scale = Vector2( 2, 1.71696 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.260961, 9.20853 )
shape = SubResource( 2 )

[node name="Detect" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( -3.05176e-005, 19.507 )
shape = SubResource( 3 )

[node name="Photo" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.716965, 8.24517 )

[node name="SpawnPhoto" type="Position2D" parent="."]

[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_Detect_body_exited"]
